--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -74,7 +74,7 @@
         </LinearLayout>
 
         <Button
-            android:id="@+id/login_button"
+            android:id="@+id/signupSubmit_button"
             android:layout_width="@dimen/button_width"
             android:layout_height="@dimen/button_height"
             android:layout_marginTop="@dimen/margin"
