--- a/app/src/main/res/layout/activity_coach_registration.xml
+++ b/app/src/main/res/layout/activity_coach_registration.xml
@@ -54,20 +54,19 @@
                 android:layout_height="wrap_content" />
 
             <TextView
-                android:id="@+id/inGame_label"
+                android:id="@+id/language_label"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="@dimen/padding"
 
-                android:text="@string/inGame"
+                android:text="@string/language"
                 android:textSize="@dimen/label" />
 
-            <EditText
-                android:id="@+id/inGame_input"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:inputType="text" />
+                android:layout_height="match_parent"
+                android:orientation="vertical"></LinearLayout>
+
 
             <TextView
                 android:id="@+id/password_label"
