--- a/app/src/main/res/values/sizes.xml
+++ b/app/src/main/res/values/sizes.xml
@@ -3,6 +3,7 @@
     <dimen name="title_text">24sp</dimen>
     <dimen name="button_text">18sp</dimen>
     <dimen name="label">20sp</dimen>
+    <dimen name="null_text">0sp</dimen>
 
     <dimen name="button_width">200sp</dimen>
     <dimen name="button_height">70sp</dimen>
@@ -11,4 +12,7 @@
 
     <dimen name="padding">8sp</dimen>
     <dimen name="margin">10sp</dimen>
+
+    <dimen name="flag_width">10sp</dimen>
+    <dimen name="flag_height">10sp</dimen>
 </resources>
