--- a/app/src/main/res/layout/activity_student_area.xml
+++ b/app/src/main/res/layout/activity_student_area.xml
@@ -6,4 +6,24 @@
     android:layout_height="match_parent"
     tools:context="com.example.cesare.leagueoflegendscoaching.StudentArea">
 
+    <RelativeLayout
+        android:layout_width="368dp"
+        android:layout_height="503dp"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="8dp">
+
+        <TextView
+            android:id="@+id/studentArea_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="18dp"
+            android:text="@string/coachRegistration"
+            android:textAlignment="center"
+            android:textSize="@dimen/title_text"
+            tools:layout_editor_absoluteX="163dp"
+            tools:layout_editor_absoluteY="38dp" />
+    </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
