--- a/app/src/main/res/layout/activity_student_area.xml
+++ b/app/src/main/res/layout/activity_student_area.xml
@@ -7,23 +7,66 @@
     tools:context="com.example.cesare.leagueoflegendscoaching.StudentArea">
 
     <RelativeLayout
-        android:layout_width="368dp"
+        android:layout_width="0dp"
         android:layout_height="503dp"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp">
+        android:layout_marginEnd="16dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:baselineAligned="false"
+        android:orientation="vertical"
+        app:layout_constraintHorizontal_bias="0.472"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/studentArea_title"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginTop="18dp"
-            android:text="@string/coachRegistration"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="24dp"
+            android:text="@string/studentArea"
             android:textAlignment="center"
-            android:textSize="@dimen/title_text"
-            tools:layout_editor_absoluteX="163dp"
-            tools:layout_editor_absoluteY="38dp" />
+            android:textSize="@dimen/title_text" />
+
+        <Button
+            android:id="@+id/findCoach_button"
+            android:layout_width="@dimen/button_width"
+            android:layout_height="@dimen/button_height"
+            android:text="@string/findCoach"
+            android:textSize="@dimen/button_text"
+            android:layout_marginTop="50dp"
+            android:layout_below="@+id/studentArea_title"
+            android:layout_centerHorizontal="true" />
+
+        <Button
+            android:id="@+id/booking_button"
+            android:layout_width="@dimen/button_width"
+            android:layout_height="@dimen/button_height"
+            android:text="@string/booking"
+            android:textSize="@dimen/button_text"
+            tools:layout_editor_absoluteX="136dp"
+            tools:layout_editor_absoluteY="119dp"
+            android:layout_below="@+id/findCoach_button"
+            android:layout_alignLeft="@+id/findCoach_button"
+            android:layout_alignStart="@+id/findCoach_button"
+            android:layout_marginTop="50dp" />
+
+        <Button
+            android:id="@+id/favoriteCoaches_button"
+            android:layout_width="@dimen/button_width"
+            android:layout_height="@dimen/button_height"
+            android:text="@string/favoriteCoaches"
+            android:textSize="@dimen/button_text"
+            tools:layout_editor_absoluteX="136dp"
+            tools:layout_editor_absoluteY="119dp"
+            android:layout_below="@+id/booking_button"
+            android:layout_alignLeft="@+id/booking_button"
+            android:layout_alignStart="@+id/booking_button"
+            android:layout_marginTop="50dp" />
     </RelativeLayout>
+
 </android.support.constraint.ConstraintLayout>
