--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.cesare.leagueoflegendscoaching.Home"
+    tools:context="com.example.cesare.leagueoflegendscoaching.Activities.Home"
     tools:layout_editor_absoluteY="73dp"
     tools:layout_editor_absoluteX="0dp">
 
@@ -13,7 +13,7 @@
         android:layout_height="503dp"
         android:layout_marginEnd="16dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginRight="16dp"
+        android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:baselineAligned="false"
@@ -35,7 +35,7 @@
             android:textSize="@dimen/title_text" />
 
         <Button
-            android:id="@+id/signupSubmit_button"
+            android:id="@+id/login_button"
             android:layout_width="@dimen/button_width"
             android:layout_height="@dimen/button_height"
             android:text="@string/login"
@@ -52,9 +52,9 @@
             android:textSize="@dimen/button_text"
             tools:layout_editor_absoluteX="136dp"
             tools:layout_editor_absoluteY="119dp"
-            android:layout_below="@+id/signupSubmit_button"
-            android:layout_alignLeft="@+id/signupSubmit_button"
-            android:layout_alignStart="@+id/signupSubmit_button"
+            android:layout_below="@+id/login_button"
+            android:layout_alignLeft="@+id/login_button"
+            android:layout_alignStart="@+id/login_button"
             android:layout_marginTop="74dp" />
     </RelativeLayout>
 
