--- a/app/src/main/res/layout/activity_student_area.xml
+++ b/app/src/main/res/layout/activity_student_area.xml
@@ -4,33 +4,44 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.cesare.leagueoflegendscoaching.StudentArea">
+    tools:context="com.example.cesare.leagueoflegendscoaching.Activities.StudentArea">
 
     <RelativeLayout
         android:layout_width="0dp"
         android:layout_height="503dp"
         android:layout_marginEnd="16dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginRight="16dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="0dp"
         android:baselineAligned="false"
         android:orientation="vertical"
-        app:layout_constraintHorizontal_bias="0.472"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent">
 
         <TextView
             android:id="@+id/studentArea_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="24dp"
             android:text="@string/studentArea"
             android:textAlignment="center"
-            android:textSize="@dimen/title_text" />
+            android:textSize="@dimen/title_text"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="17dp" />
+
+        <TextView
+            android:id="@+id/welcomeMessage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/studentArea_title"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="27dp"
+            android:textAlignment="center"
+            android:textSize="20sp" />
 
         <Button
             android:id="@+id/findCoach_button"
@@ -39,7 +50,7 @@
             android:text="@string/findCoach"
             android:textSize="@dimen/button_text"
             android:layout_marginTop="50dp"
-            android:layout_below="@+id/studentArea_title"
+            android:layout_below="@+id/welcomeMessage"
             android:layout_centerHorizontal="true" />
 
         <Button
