--- a/app/src/main/res/layout/activity_coach_registration.xml
+++ b/app/src/main/res/layout/activity_coach_registration.xml
@@ -91,7 +91,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    style="@style/Widget.AppCompat.Button"
+                    android:background="@drawable/flag_button"
 
                     android:src="@mipmap/flag_italy" />
 
