--- a/app/src/main/res/layout/activity_coach_registration.xml
+++ b/app/src/main/res/layout/activity_coach_registration.xml
@@ -6,7 +6,7 @@
     tools:context="com.example.cesare.leagueoflegendscoaching.Activities.SignUp">
 
     <RelativeLayout
-        android:id="@+id/relative_signup"
+        android:id="@+id/relative_coachRegistration"
         android:layout_width="368dp"
         android:layout_height="503dp"
         tools:layout_editor_absoluteX="8dp"
