--- a/app/src/main/res/drawable/flag_normal.xml
+++ b/app/src/main/res/drawable/flag_normal.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <solid android:color="D3D3D3"/>
+    <solid android:color="#D3D3D3"/>
     <padding/>
-    <stroke android:color="#FF000" android:width="5sp"/>
+    <stroke />
+    <size android:height="@dimen/flag_height" android:width="@dimen/flag_width" />
 </shape>
