--- a/app/src/main/res/layout/activity_coach_registration.xml
+++ b/app/src/main/res/layout/activity_coach_registration.xml
@@ -83,6 +83,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:padding="5sp"
                     android:background="@drawable/flag_button"
 
                     android:src="@mipmap/flag_unitedkingdom" />
@@ -92,6 +93,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:padding="5sp"
                     android:background="@drawable/flag_button"
 
                     android:src="@mipmap/flag_italy" />
@@ -101,6 +103,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:padding="5sp"
                     android:background="@drawable/flag_button"
 
                     android:src="@mipmap/flag_germany" />
@@ -110,6 +113,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:padding="5sp"
                     android:background="@drawable/flag_button"
                     android:src="@mipmap/flag_france" />
 
@@ -118,6 +122,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:padding="5sp"
                     android:background="@drawable/flag_button"
 
                     android:src="@mipmap/flag_spain" />
@@ -185,6 +190,7 @@
                 android:textSize="@dimen/label"/>
 
             <RelativeLayout
+                android:id="@+id/schedule_layout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
