--- a/app/src/main/res/layout/activity_coach_registration.xml
+++ b/app/src/main/res/layout/activity_coach_registration.xml
@@ -177,6 +177,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:ems="10"
+                    android:text="0"
                     android:inputType="number" />
             </LinearLayout>
 
