--- a/app/src/main/res/layout/activity_student_area.xml
+++ b/app/src/main/res/layout/activity_student_area.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.cesare.leagueoflegendscoaching.Activities.StudentArea">
-
     <RelativeLayout
+        android:id="@+id/relative_studentArea"
         android:layout_width="0dp"
         android:layout_height="503dp"
         android:layout_marginEnd="16dp"
@@ -20,7 +20,10 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
         android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent">
+        app:layout_constraintRight_toRightOf="parent"
+        android:clickable="true"
+        android:focusable="true"
+        android:focusableInTouchMode="true">
 
         <TextView
             android:id="@+id/studentArea_title"
@@ -78,6 +81,7 @@
             android:layout_alignLeft="@+id/booking_button"
             android:layout_alignStart="@+id/booking_button"
             android:layout_marginTop="50dp" />
+
     </RelativeLayout>
 
 </android.support.constraint.ConstraintLayout>
