--- a/app/src/main/res/layout/activity_search_coach.xml
+++ b/app/src/main/res/layout/activity_search_coach.xml
@@ -5,6 +5,12 @@
     android:layout_height="match_parent"
     tools:context="com.example.cesare.leagueoflegendscoaching.Activities.SignUp">
 
+    <ScrollView
+        android:layout_width="368dp"
+        android:layout_height="503dp"
+        tools:layout_editor_absoluteY="8dp"
+        tools:layout_editor_absoluteX="8dp">
+
     <RelativeLayout
         android:id="@+id/relative_findCoach"
         android:layout_width="368dp"
@@ -231,7 +237,7 @@
                     android:layout_weight="1"
 
                     android:padding="@dimen/padding"
-                    android:text="@string/cost"
+                    android:text="@string/maxCost"
                     android:textSize="@dimen/label" />
 
                 <EditText
@@ -257,5 +263,6 @@
             android:textSize="@dimen/button_text" />
 
     </RelativeLayout>
+    </ScrollView>
 </android.support.constraint.ConstraintLayout>
 
