--- a/app/src/main/res/layout/activity_coaches_list.xml
+++ b/app/src/main/res/layout/activity_coaches_list.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -27,6 +26,15 @@
             android:textSize="@dimen/title_text"
             tools:layout_editor_absoluteX="163dp"
             tools:layout_editor_absoluteY="38dp" />
+
+        <ScrollView
+            android:id="@+id/frameList"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/coachesList_title">
+
+
+        </ScrollView>
 
 
     </RelativeLayout>
