--- a/app/src/main/res/layout/activity_coaches_list.xml
+++ b/app/src/main/res/layout/activity_coaches_list.xml
@@ -21,6 +21,7 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_marginTop="18dp"
+            android:layout_marginBottom="18dp"
             android:text="@string/coachesList"
             android:textAlignment="center"
             android:textSize="@dimen/title_text"
@@ -28,10 +29,19 @@
             tools:layout_editor_absoluteY="38dp" />
 
         <ScrollView
-            android:id="@+id/frameList"
+            android:id="@+id/scrollList"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@+id/coachesList_title">
+
+            <LinearLayout
+                android:id="@+id/frameList"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                >
+
+            </LinearLayout>
 
 
         </ScrollView>
