--- a/app/src/main/res/layout/activity_coaches_list.xml
+++ b/app/src/main/res/layout/activity_coaches_list.xml
@@ -5,7 +5,6 @@
     android:layout_height="match_parent"
     tools:context="com.example.cesare.leagueoflegendscoaching.Activities.CoachesList">
 
-
     <RelativeLayout
         android:id="@+id/relative_coachesList"
         android:layout_width="368dp"
@@ -28,23 +27,12 @@
             tools:layout_editor_absoluteX="163dp"
             tools:layout_editor_absoluteY="38dp" />
 
-        <ScrollView
-            android:id="@+id/scrollList"
+        <ListView
+            android:id="@android:id/list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@+id/coachesList_title">
-
-            <LinearLayout
-                android:id="@+id/frameList"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                >
-
-            </LinearLayout>
-
-
-        </ScrollView>
+        </ListView>
 
 
     </RelativeLayout>
