--- a/app/src/main/res/layout/champion_frame.xml
+++ b/app/src/main/res/layout/champion_frame.xml
@@ -4,12 +4,12 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="50dp"
-    android:weightSum="6">
+    android:weightSum="12">
 
     <LinearLayout
         android:id="@+id/imageLayout"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_weight="2">
 
         <ImageView
@@ -23,7 +23,7 @@
         android:orientation="horizontal"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="2">
+        android:layout_weight="5">
 
         <TextView
             android:id="@+id/championName"
@@ -37,7 +37,7 @@
         android:orientation="vertical"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="2">
+        android:layout_weight="5">
 
             <TextView
                 android:layout_width="match_parent"
